# hand_learning_cpp

./: CMakeLists.txt  Camera.cpp  ColorHistogram.cpp  FaceDetection.cpp  ObjSegmentation.cpp  PclManipulation.cpp  SkinDetection.cpp  adaptiveskindetector.cpp  hand_learning.kdev4  main.cpp  main.cpp.bak  main.cpp.freenect  main.cpp.full
include/: Camera.h  ColorHistogram.hpp  FaceDetection.h  ObjSegmentation.h  PclManipulation.h  SkinDetection.h  adaptiveskindetector.hpp
